# mcp-tailwindplus

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml  server.py
.claude/: settings.json
mcp_tailwindui/: __init__.py  server.py  tailwind_plus.py
src/mcp_tailwindplus/: __init__.py  server.py  tailwind_plus.py
tests/: test_server.py  test_tailwind_plus.py
