[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "mcp-tailwindplus"
version = "0.1.0"
description = "FastMCP server for browsing and searching TailwindPlus components"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Richard Michael", email = "rmichael@edgeofthenet.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.2,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/richardkmichael/mcp-tailwindplus"
Repository = "https://github.com/richardkmichael/mcp-tailwindplus"
Issues = "https://github.com/richardkmichael/mcp-tailwindplus/issues"

[project.scripts]
mcp-tailwindplus = "mcp_tailwindplus:main"

# Development tool configuration
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["mcp_tailwindplus"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",                    # show extra test summary info
    "--strict-markers",       # treat unregistered markers as errors
    "--strict-config",        # treat config issues as errors
    "-W", "error",            # treat warnings as errors
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"              # automatically detect async tests
asyncio_default_fixture_loop_scope = "function"  # fix deprecation warning
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "container: marks tests that require Docker containers",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "ruff>=0.6.0,<1.0.0",
]

# Development workflow commands
# Run via: python -m <command>
# Example: python -m pytest, python -m ruff check, python -m ruff format
